--- a/PeggleClone/PeggleClone/Base.lproj/Main.storyboard
+++ b/PeggleClone/PeggleClone/Base.lproj/Main.storyboard
@@ -483,62 +483,31 @@
                         <rect key="frame" x="0.0" y="0.0" width="810" height="1080"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background" translatesAutoresizingMaskIntoConstraints="NO" id="qJ4-n9-VYv">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8Pl-ge-MCl" userLabel="GameplayAreaView" customClass="GameplayAreaView" customModule="PeggleClone" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="20" width="810" height="1060"/>
-                            </imageView>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0Lf-df-bW9" customClass="GameplayAreaView" customModule="PeggleClone" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="20" width="810" height="1060"/>
-                                <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="cannon" translatesAutoresizingMaskIntoConstraints="NO" id="FYU-kp-UxS">
-                                        <rect key="frame" x="285" y="-450" width="240" height="450"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                    </imageView>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="1I5-gh-Loo">
-                                        <rect key="frame" x="587" y="49" width="160" height="200"/>
-                                    </stackView>
-                                    <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ccK-nx-wb0">
-                                        <rect key="frame" x="40" y="100" width="730" height="860"/>
-                                        <connections>
-                                            <segue destination="tVH-c0-Tu7" kind="embed" identifier="segueGameEnd" id="fze-gg-aIr"/>
-                                        </connections>
-                                    </containerView>
-                                </subviews>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <constraints>
-                                    <constraint firstAttribute="bottom" secondItem="1I5-gh-Loo" secondAttribute="bottom" constant="811" id="0OF-eG-Kto"/>
-                                    <constraint firstItem="ccK-nx-wb0" firstAttribute="centerY" secondItem="0Lf-df-bW9" secondAttribute="centerY" id="7gE-bc-SO3"/>
-                                    <constraint firstItem="ccK-nx-wb0" firstAttribute="centerX" secondItem="0Lf-df-bW9" secondAttribute="centerX" id="P6U-Q8-3NQ"/>
-                                    <constraint firstAttribute="trailing" secondItem="ccK-nx-wb0" secondAttribute="trailing" constant="40" id="Xrr-aG-YYu"/>
-                                    <constraint firstAttribute="bottom" secondItem="ccK-nx-wb0" secondAttribute="bottom" constant="100" id="axw-4y-Yf8"/>
-                                    <constraint firstItem="ccK-nx-wb0" firstAttribute="top" secondItem="0Lf-df-bW9" secondAttribute="top" constant="100" id="bJa-4c-20d"/>
-                                    <constraint firstAttribute="trailing" secondItem="1I5-gh-Loo" secondAttribute="trailing" constant="63" id="mjv-n2-M8u"/>
-                                    <constraint firstItem="ccK-nx-wb0" firstAttribute="leading" secondItem="0Lf-df-bW9" secondAttribute="leading" constant="40" id="tX5-sw-d7P"/>
-                                    <constraint firstItem="1I5-gh-Loo" firstAttribute="top" secondItem="0Lf-df-bW9" secondAttribute="top" constant="49" id="wqX-I8-cu7"/>
-                                    <constraint firstItem="1I5-gh-Loo" firstAttribute="leading" secondItem="0Lf-df-bW9" secondAttribute="leading" constant="587" id="xG7-hs-6Ux"/>
-                                </constraints>
-                                <connections>
-                                    <outlet property="ivCannon" destination="FYU-kp-UxS" id="hZr-bx-MFH"/>
-                                    <outlet property="svInfo" destination="1I5-gh-Loo" id="jco-4H-YX9"/>
-                                </connections>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             </view>
+                            <containerView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ccK-nx-wb0">
+                                <rect key="frame" x="40" y="110" width="730" height="860"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <connections>
+                                    <segue destination="tVH-c0-Tu7" kind="embed" identifier="segueGameEnd" id="fze-gg-aIr"/>
+                                </connections>
+                            </containerView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="iMk-no-Bs4"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="iMk-no-Bs4" firstAttribute="trailing" secondItem="0Lf-df-bW9" secondAttribute="trailing" id="DSY-9A-LSz"/>
-                            <constraint firstItem="qJ4-n9-VYv" firstAttribute="top" secondItem="iMk-no-Bs4" secondAttribute="top" id="KJt-9b-rhH"/>
-                            <constraint firstItem="qJ4-n9-VYv" firstAttribute="leading" secondItem="iMk-no-Bs4" secondAttribute="leading" id="QX6-aw-KXn"/>
-                            <constraint firstItem="iMk-no-Bs4" firstAttribute="bottom" secondItem="0Lf-df-bW9" secondAttribute="bottom" id="YW3-YR-M6o"/>
-                            <constraint firstItem="qJ4-n9-VYv" firstAttribute="trailing" secondItem="iMk-no-Bs4" secondAttribute="trailing" id="aGA-kx-93j"/>
-                            <constraint firstItem="0Lf-df-bW9" firstAttribute="leading" secondItem="iMk-no-Bs4" secondAttribute="leading" id="ac0-CJ-OfR"/>
-                            <constraint firstItem="iMk-no-Bs4" firstAttribute="bottom" secondItem="qJ4-n9-VYv" secondAttribute="bottom" id="oQv-2v-VZt"/>
-                            <constraint firstItem="0Lf-df-bW9" firstAttribute="top" secondItem="iMk-no-Bs4" secondAttribute="top" id="ynT-Vp-qUJ"/>
+                            <constraint firstItem="8Pl-ge-MCl" firstAttribute="top" secondItem="iMk-no-Bs4" secondAttribute="top" id="OuY-I9-bTw"/>
+                            <constraint firstItem="8Pl-ge-MCl" firstAttribute="leading" secondItem="iMk-no-Bs4" secondAttribute="leading" id="cpz-Sm-l96"/>
+                            <constraint firstItem="iMk-no-Bs4" firstAttribute="trailing" secondItem="8Pl-ge-MCl" secondAttribute="trailing" id="lHp-dT-WcM"/>
+                            <constraint firstItem="iMk-no-Bs4" firstAttribute="bottom" secondItem="8Pl-ge-MCl" secondAttribute="bottom" id="zaa-he-gRo"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="PYr-EM-JJt"/>
                     <connections>
                         <outlet property="cvGameEnd" destination="ccK-nx-wb0" id="JEw-iU-Dxx"/>
-                        <outlet property="vGame" destination="0Lf-df-bW9" id="nag-Qo-3yz"/>
+                        <outlet property="vWithinSafeArea" destination="8Pl-ge-MCl" id="28n-6x-W5I"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nux-d2-tgA" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -719,7 +688,6 @@
     </scenes>
     <resources>
         <image name="background" width="4000" height="3000"/>
-        <image name="cannon" width="434" height="450"/>
         <image name="xmark.bin" catalog="system" width="128" height="93"/>
         <namedColor name="AccentColor">
             <color red="0.0" green="0.46000000000000002" blue="0.89000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
