--- a/PeggleClone/PeggleClone/Base.lproj/Main.storyboard
+++ b/PeggleClone/PeggleClone/Base.lproj/Main.storyboard
@@ -487,9 +487,8 @@
                                 <rect key="frame" x="0.0" y="20" width="810" height="1060"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             </view>
-                            <containerView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ccK-nx-wb0">
-                                <rect key="frame" x="40" y="110" width="730" height="860"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ccK-nx-wb0">
+                                <rect key="frame" x="40.5" y="135" width="729" height="810"/>
                                 <connections>
                                     <segue destination="tVH-c0-Tu7" kind="embed" identifier="segueGameEnd" id="fze-gg-aIr"/>
                                 </connections>
@@ -498,9 +497,13 @@
                         <viewLayoutGuide key="safeArea" id="iMk-no-Bs4"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="ccK-nx-wb0" firstAttribute="width" secondItem="Ftf-MO-GG8" secondAttribute="width" multiplier="0.9" id="78d-oE-3qJ"/>
+                            <constraint firstItem="ccK-nx-wb0" firstAttribute="centerX" secondItem="Ftf-MO-GG8" secondAttribute="centerX" id="CTB-8v-EkM"/>
                             <constraint firstItem="8Pl-ge-MCl" firstAttribute="top" secondItem="iMk-no-Bs4" secondAttribute="top" id="OuY-I9-bTw"/>
                             <constraint firstItem="8Pl-ge-MCl" firstAttribute="leading" secondItem="iMk-no-Bs4" secondAttribute="leading" id="cpz-Sm-l96"/>
+                            <constraint firstItem="ccK-nx-wb0" firstAttribute="centerY" secondItem="Ftf-MO-GG8" secondAttribute="centerY" id="fCM-gi-3p3"/>
                             <constraint firstItem="iMk-no-Bs4" firstAttribute="trailing" secondItem="8Pl-ge-MCl" secondAttribute="trailing" id="lHp-dT-WcM"/>
+                            <constraint firstItem="ccK-nx-wb0" firstAttribute="height" secondItem="Ftf-MO-GG8" secondAttribute="height" multiplier="0.75" id="oRl-eP-RBw"/>
                             <constraint firstItem="iMk-no-Bs4" firstAttribute="bottom" secondItem="8Pl-ge-MCl" secondAttribute="bottom" id="zaa-he-gRo"/>
                         </constraints>
                     </view>
@@ -644,29 +647,29 @@
             <objects>
                 <viewController id="tVH-c0-Tu7" customClass="GameEndViewController" customModule="PeggleClone" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="GDy-7f-j4B">
-                        <rect key="frame" x="0.0" y="0.0" width="730" height="860"/>
+                        <rect key="frame" x="0.0" y="0.0" width="729" height="810"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="mf7-xN-hoh">
-                                <rect key="frame" x="145.5" y="172" width="439" height="322"/>
+                                <rect key="frame" x="145" y="162" width="439" height="322"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="439" id="Gs3-dp-gIH"/>
                                     <constraint firstAttribute="height" constant="322" id="SeB-3N-2AO"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="l19-ru-fNr">
-                                <rect key="frame" x="365" y="638" width="0.0" height="0.0"/>
+                                <rect key="frame" x="364.5" y="588" width="0.0" height="0.0"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hrD-yj-o3m">
-                                <rect key="frame" x="337" y="729" width="56" height="31"/>
+                                <rect key="frame" x="336.5" y="679" width="56" height="31"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="filled" title="Back"/>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dDC-zk-Gaf">
-                                <rect key="frame" x="329.5" y="668" width="71" height="31"/>
+                                <rect key="frame" x="329" y="618" width="71" height="31"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="filled" title="Restart"/>
                             </button>
